--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: 
   instagram:
-  linkedin:
+  linkedin: https://www.linkedin.com/in/michael-chang-a2a57855/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
