--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Micahel Chang
 description: developing solutions Comfortably Simple
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars.githubusercontent.com/u/102712839?v=4
 
 #
 # Flags below are optional
