--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: jaeyoun.chang@gmail.com
   facebook:
   flickr:
-  github: 
+  github: jaeyoun-chang
   instagram:
   linkedin: michael-chang-a2a57855
   pinterest:
