--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Michael Chang
 
 # Short bio or description (displayed in the header)
-description: developing solutions Comfortably Simple
+description: developing solutions Comfortably Simple & Calmly Splendor
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/102712839?v=4
